objects/Employee_Expiring_Documents__c.object
<CustomObject>
    <fields>
        <fullName>Document_Number__c</fullName>
        <label>Document Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Drivers Licence (Card)</fullName>
                </value>
                <value>
                    <fullName>FNB Business Credit Card</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Vehicle Licence Disc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Variant__c</fullName>
        <label>Document Variant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Information__c</fullName>
        <label>Employee Information</label>
        <referenceTo>Employee_Information__c</referenceTo>
        <relationshipLabel>Employee Expiring Documents</relationshipLabel>
        <relationshipName>Employee_Expiring_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <label>Issue Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Secondary_Email_Address__c</fullName>
        <label>Secondary Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Trigger_Date__c</fullName>
        <label>Trigger Date</label>
        <type>Date</type>
    </fields>
    <label>Employee Expiring Document</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EED-{0000}</displayFormat>
        <label>Employee Expiring Documents Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Expiring Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>